fixing z-index issue

--- a/app/assets/stylesheets/materialize/layouts/_default.scss
+++ b/app/assets/stylesheets/materialize/layouts/_default.scss
@@ -24,7 +24,7 @@ html {
   // layout components
   &-header {
     position: relative;
-    z-index: 1;
+    z-index: 2;
     height: auto;
     @include clearafter;
 
